# goit-ds-hw-02

./: README.md  pyproject.toml
src/goit_ds_hw_02/: Count_tasks_by_status.sql  add_task_for_user.sql  change_status.sql  creat_db.py  creat_table.sql  create_db.py  dell_task_by_id.sql  fullname_update.sql  help.py  seed.py  select_users_by_mail.sql  task_of_user.sql  task_with_status.sql  tasks_by_user_email.sql  tasks_not_completed.sql  tasks_without_description.sql  user_tasks.db  user_without_task.sql  users_tasks_count.sql  users_with_tasks_in_progress.sql
