[project]
name = "goit-ds-hw-02"
version = "0.1.0"
description = ""
authors = [
    {name = "Евгений Лысенко",email = "udjiedwards@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker (>=40.11.0,<41.0.0)"
]

[tool.poetry]
packages = [{include = "goit_ds_hw_02", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
